--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css?family=Courier+Prime&display=swap');
+
+
 * {
   box-sizing: border-box;
   padding: 0;
@@ -5,7 +8,7 @@
 }
 
 body {
-  /* font-family: 'Josefin Sans', sans-serif; */
+  font-family: 'Courier Prime', monospace;
 }
 
 .navbar {
